--- a/main.css
+++ b/main.css
@@ -105,7 +105,7 @@ nav button:hover {
 }
 
 .banner-image img {
- z-index: 1;
+ z-index: 2;
  position: relative;
  clip-path: polygon(
   45% 0%,
@@ -130,10 +130,9 @@ nav button:hover {
  width: 65%;
  height: 65%;
  border: 2px solid white;
- z-index: -1;
+ z-index: 1;
  border-radius: 14px;
  transform: rotate(23deg);
- z-index: -1;
 }
 
 .banner-image::after {
@@ -144,7 +143,7 @@ nav button:hover {
  width: 63%;
  height: 66%;
  border: 2px solid white;
- z-index: 0;
+ z-index: 1;
  border-radius: 14px;
  background-color: #5454d4;
  transform: rotate(23deg);
@@ -246,9 +245,9 @@ nav button:hover {
  content: "";
  border-top: 3px solid white;
  border-right: 3px solid white;
- height: 40px;
+ height: 44px;
  width: 41px;
- transform: rotate(33deg) skew(-20deg);
+ transform: rotate(30deg) skew(-22deg);
  left: -21px;
  top: 3px;
 }
@@ -256,25 +255,25 @@ nav button:hover {
 .triangle-2 {
  position: absolute;
  width: 27px;
- height: 46px;
+ height: 47px;
  left: -85px;
  top: 370px;
- border-left: 3px solid #0e0a0a;
+ border-left: 1px solid #fff;
 }
 
 .triangle-2::after {
  position: absolute;
  content: "";
- border-top: 2px solid white;
- border-right: 2px solid white;
+ border-top: 1px solid white;
+ border-right: 1px solid white;
  height: 40px;
  width: 41px;
  transform: rotate(33deg) skew(-20deg);
- left: -22px;
+ left: -21px;
  top: 3px;
 }
 
-/*  */
+/* service btn */
 .btn-arrow {
  display: inline-block;
  width: 8px;
@@ -303,13 +302,16 @@ nav button:hover {
 }
 .feature-section-title {
  display: flex;
- justify-content: space-around;
+ justify-content: space-between;
  align-items: center;
 }
 .feature-section-title h1 {
  font-weight: bold;
- font-size: 3em;
+ font-size: 4em;
  letter-spacing: 3px;
+}
+.feature-text {
+ font-size: 1.3rem;
 }
 .feature-image {
  position: relative;
@@ -317,8 +319,7 @@ nav button:hover {
 .feature-image img {
  margin: 0 auto;
  margin-top: 2em;
- max-width: 100%;
- width: 80%;
+ width: 100%;
 }
 .feature-play-btn {
  position: absolute;
@@ -340,6 +341,14 @@ nav button:hover {
  border-style: solid;
  border-width: 25px 0 25px 40px;
  border-color: transparent transparent transparent rgba(255, 255, 255, 0.76);
+}
+.service-section {
+ background: linear-gradient(-80deg, #25201d, #252541);
+ padding: 3em 0;
+ text-align: center;
+}
+.service-title {
+ font-size: 4rem;
 }
 
 /* media Query */
@@ -396,6 +405,39 @@ nav button:hover {
   padding: 0;
  }
  .feature-section {
-  padding-top: 7rem;
+  padding-top: 10rem;
+ }
+ .feature-play-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #5454d4;
+ }
+ .feature-play-btn::before {
+  content: "";
+  position: absolute;
+  top: 29%;
+  right: 30%;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 10px 0 10px 15px;
+  border-color: transparent transparent transparent rgba(255, 255, 255, 0.76);
+ }
+ .feature-image img {
+  width: 100%;
+ }
+ .feature-section-title {
+  align-items: flex-start;
+ }
+ .feature-section-title h1 {
+  font-size: 2rem;
+ }
+ .service-title {
+  font-size: 2rem;
  }
 }
