--- a/main.css
+++ b/main.css
@@ -557,6 +557,82 @@ nav button:hover {
 .btn-container {
  position: relative;
 }
+.zigzag-2 {
+ position: absolute;
+ width: 24px;
+ height: 20px;
+ left: 0px;
+ top: 30px;
+ border-bottom: 3px solid #e7e7e7;
+ border-right: 3px solid #e7e7e7;
+ transform: rotate(40deg);
+}
+.zigzag-2::before {
+ content: "";
+ position: absolute;
+ width: 24px;
+ height: 20px;
+ left: 23px;
+ top: -17px;
+ border-bottom: 3px solid #e7e7e7;
+ border-right: 3px solid #e7e7e7;
+}
+.zigzag-2::after {
+ content: "";
+ position: absolute;
+ width: 24px;
+ height: 20px;
+ left: 45px;
+ bottom: 31px;
+ border-bottom: 3px solid #e7e7e7;
+ transform: rotate(5deg);
+}
+
+/* Contact Section */
+.contact-section {
+ background-color: #1a1a24;
+ padding: 10rem 0;
+}
+.contact-text {
+ position: relative;
+}
+.circles-3 {
+ position: absolute;
+ height: 38px;
+ width: 38px;
+ border: 3px solid #fff;
+ border-radius: 50%;
+ bottom: -90px;
+}
+.circles-3::after {
+ content: "";
+ position: absolute;
+ height: 40px;
+ width: 40px;
+ border: 1px solid #fff;
+ border-radius: 50%;
+ top: 10px;
+ left: 13px;
+}
+.plus-2 {
+ background: rgb(255, 255, 255);
+ height: 38px;
+ position: absolute;
+ width: 3px;
+ top: -80px;
+ left: 195%;
+ border-radius: 5px;
+}
+.plus-2::after {
+ content: "";
+ position: absolute;
+ height: 3px;
+ width: 38px;
+ background-color: #fff;
+ border-radius: 5px;
+ top: 17px;
+ left: -17px;
+}
 /* media Query */
 
 @media screen and (max-width: 768px) {
