--- a/main.css
+++ b/main.css
@@ -614,13 +614,16 @@ nav button:hover {
  top: 10px;
  left: 13px;
 }
+.contactus-text {
+ position: relative;
+}
 .plus-2 {
  background: rgb(255, 255, 255);
  height: 38px;
  position: absolute;
  width: 3px;
- top: -80px;
- left: 195%;
+ top: -100px;
+ right: 110px;
  border-radius: 5px;
 }
 .plus-2::after {
@@ -632,6 +635,31 @@ nav button:hover {
  border-radius: 5px;
  top: 17px;
  left: -17px;
+}
+footer {
+ padding: 3rem 0;
+ background-color: #19191b;
+}
+.footer-logo {
+ display: flex;
+ align-items: center;
+}
+.footer-links {
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+}
+.footer-links a {
+ color: #bcbbbb;
+}
+.footer-copyright {
+ color: #bcbbbb;
+ display: flex;
+ align-items: center;
+ justify-content: end;
+}
+.footer-copyright p {
+ margin: 0;
 }
 /* media Query */
 
@@ -680,11 +708,23 @@ nav button:hover {
  }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 415px) {
  nav ul {
   flex-direction: column;
   margin: 1em 0;
   padding: 0;
+ }
+ .banner-image::before {
+  content: "";
+  position: absolute;
+  top: 65px;
+  left: 50px;
+  width: 65%;
+  height: 65%;
+  border: 2px solid white;
+  z-index: 1;
+  border-radius: 14px;
+  transform: rotate(23deg);
  }
  .feature-section {
   padding-top: 10rem;
@@ -729,5 +769,25 @@ nav button:hover {
  .triangle-4 {
   top: -38px;
   left: 38px;
+ }
+ .plus-2 {
+  top: -180px;
+  left: 200px;
+ }
+ .circles-2 {
+  top: 60px;
+  right: 10px;
+ }
+ .circles-3 {
+  top: 200px;
+ }
+ .footer-links {
+  margin: 1em 0;
+  flex-direction: column;
+  align-items: flex-start;
+ }
+ .footer-copyright {
+  display: block;
+  margin-bottom: 1em;
  }
 }
